app/assets/stylesheets/main.css
/* ... */
.brand_header .topbar div > ul a:hover {
  background: #dddddd; /* Old browsers */
  background: -moz-linear-gradient(top,  #dddddd 0%, #ffffff 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* IE10+ */
  background: linear-gradient(top,  #dddddd 0%,#ffffff 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dddddd', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
  color: #999;
  height: 35px;
  text-shadow: none;
}

.brand_header .nav_topbar img.logo {
  float: left;
  padding: 20px 25px 10px 0;
}

.brand_header .nav_topbar p.nav_desc {
  font-size: 10px;
  line-height: 5px;
  padding-top:10px;
}

#top-banner  {
  background-color:#edeae3;
  background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(237,234,227,1) 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(237,234,227,1)));
  background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(237,234,227,1) 100%);
  background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(237,234,227,1) 100%);
  background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(237,234,227,1) 100%);
  background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(237,234,227,1) 100%);
  border-bottom: 1px solid #C2C2C2;
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edeae3',GradientType=0 );
  margin-bottom: 20px;
}
#top-banner  .tabs {
  margin-bottom:0;
}
#top-banner  .tabs > li > a {
  background-color: #42aaf1;
  color: #fff;
  padding: 0 30px;
  font-size: 16px;
  font-weight:bold;
  margin-right: 5px;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}
#top-banner .tabs .active > a, #top-banner .tabs .active > a:hover {
  background-color: #fff;
  color: #1e316b;
}

#top-banner .building-relationships-container h2 {
  background: transparent url('../images/home_triangle.png') 0 5px no-repeat;
  float:left;
  font-weight:normal;
  font-size:31px;
  line-height:105px;
  padding-left:75px;
}
#top-banner .building-relationships-container span {
  font-weight:bold;
}
#top-banner .building-relationships-container ul {
  float:right;
  list-style-type:none;
  margin-top:15px;
  margin-right:45px;
}
#top-banner .building-relationships-container ul  li{
  background: transparent url('../images/home_squarebullet.png')  0 .5em no-repeat;
  margin-top:5px;
  padding-left:20px;
}
#top-banner .container > h1 {
  padding-top: 16px;
}
.sector {
  padding: 1px 3px 2px;
  display: inline-block;
  font-weight: bold;
  color: #8DC04A;
  white-space: nowrap;
  background-color: #f0fdec;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  border: 1px solid #8DC04A; 
  background-image: -ms-linear-gradient(top right, #F4F9F5 0%, #EBF1D5 100%);  /* IE10 */ 
  background-image: -moz-linear-gradient(top right, #F4F9F5 0%, #EBF1D5 100%); /* Mozilla Firefox */ 
  background-image: -o-linear-gradient(top right, #F4F9F5 0%, #EBF1D5 100%); /* Opera */ 
  background-image: -webkit-gradient(linear, right top, left bottom, color-stop(0, #F4F9F5), color-stop(1, #EBF1D5)); /* Webkit (Safari/Chrome 10) */ 
  background-image: -webkit-linear-gradient(top right, #F4F9F5 0%, #EBF1D5 100%); /* Webkit (Chrome 11+) */  
  background-image: linear-gradient(top right, #F4F9F5 0%, #EBF1D5 100%); /* Proposed W3C Markup */
}
.project_avatar,
.profile_avatar {
  border: 1px solid #4BAAEE; 
  float: left;
  padding: 1px;
  width: 94px;
  height: 94px;
} 
.profile_header .profile_actions,
.project_header .project_actions {
  padding-top: 8px;
  text-align: right;
}
.track_header .track_actions .label.large,
.track_header .track_actions .btn.large,
.search_header .search_actions .label.large,
.search_header .search_actions .btn.large,
.profile_header .profile_actions .label.large,
.profile_header .profile_actions .btn.large,
.project_header .project_actions .label.large,
.project_header .project_actions .btn.large {
  display: inline-block;
  width: 240px;
  margin: 5px;
  text-align: center;
  font-size: 18px;
  font-weight: bold;
}
.profile_header .profile_actions .btn.small,
.project_header .project_actions .btn.small {
  text-transform: uppercase;
  text-align: center;
  margin: 5px 5px 0 0;
  width: 111px;
  font-weight: bold;
}


.footer {
  border-width: 2px 0 0 0;
  border-style: solid;
  border-color: #ddd;
  margin: 10px 0 0 0;
  font-size: 10px;
  background-color: #EDEDED;
  background-image: -ms-linear-gradient(top, #EDEDED 0%, #FCFCFC 100%);   /* IE*/  
  background-image: -moz-linear-gradient(top, #EDEDED 0%, #FCFCFC 100%); /* Mozilla Firefox */
  background-image: -o-linear-gradient(top, #EDEDED 0%, #FCFCFC 100%); /* Opera */  
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #EDEDED), color-stop(1, #FCFCFC)); /* Webkit (Safari/Chrome 10) */ 
  background-image: -webkit-linear-gradient(top, #EDEDED 0%, #FCFCFC 100%); /* Webkit (Chrome 11+) */ 
  background-image: linear-gradient(top, #EDEDED 0%, #FCFCFC 100%); /* Proposed W3C Markup */
}

.footer ul {
  list-style: none;
  margin: 45px 0 0 0;
  font-size:14px;
  font-weight:normal;
}
.footer ul li {
  float: right;
  padding: 3px 6px;
}
.footer ul li.left_side  {
  float:left;
  padding-bottom: 45px;
}

.footer ul li span.left_sidetop,
.footer ul span.left_sidebottom {
  display:block;
  font-weight:bold;
  font-size:22px;
  left:0px;
  position:relative;
}
.footer ul li span.left_sidebottom {
  font-size:12px;
  font-weight:normal;
  margin-top:5px;
}

.field_with_errors {
  padding: 0;
  display: inline-block;
}
/* ... */

